--- a/SecureApp/SecureApp/SecureApp.csproj
+++ b/SecureApp/SecureApp/SecureApp.csproj
@@ -35,6 +35,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Command\Handshake.cs" />
+    <Compile Include="Model\Interface\ICommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
