--- a/SecureApp/SecureApp.Utilities/SecureApp.Utilities.csproj
+++ b/SecureApp/SecureApp.Utilities/SecureApp.Utilities.csproj
@@ -38,15 +38,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Compression\Gzip.cs" />
-    <Compile Include="Crypt\Aes.cs" />
-    <Compile Include="Crypt\Hash.cs" />
+    <Compile Include="Extensions\Compression\Gzip.cs" />
+    <Compile Include="Extensions\Crypt\Aes.cs" />
+    <Compile Include="Extensions\Crypt\Hash.cs" />
     <Compile Include="Extensions\Formatter.cs" />
     <Compile Include="Model\Interface\ISocketEncryption.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Networking" />
+    <Folder Include="Extensions\Networking" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
