--- a/SecureApp/SecureApp/SecureApp.csproj
+++ b/SecureApp/SecureApp/SecureApp.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Core\Command\Handshake.cs" />
     <Compile Include="Model\Interface\ICommand.cs" />
+    <Compile Include="Model\Networking\ClientSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
