--- a/SecureApp/SecureApp/SecureApp.csproj
+++ b/SecureApp/SecureApp/SecureApp.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Command\Handshake.cs" />
+    <Compile Include="Core\Command\SharedSecret.cs" />
     <Compile Include="Model\Interface\ICommand.cs" />
     <Compile Include="Model\Networking\ClientSession.cs" />
     <Compile Include="Program.cs" />
