Move demo project

--- a/Tests/Demo/Demo.csproj
+++ b/Tests/Demo/Demo.csproj
@@ -32,20 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SecureApp.Licensing\SecureApp.Licensing.csproj">
+    <ProjectReference Include="..\..\SecureApp\SecureApp.Licensing\SecureApp.Licensing.csproj">
       <Project>{f170d9a0-32ff-40b8-b333-8af7229ab206}</Project>
       <Name>SecureApp.Licensing</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
