--- a/SecureApp/SecureApp.Utilities/packages.config
+++ b/SecureApp/SecureApp.Utilities/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
-  <package id="DeviceId" version="4.2.0" targetFramework="net45" />
+    <package id="DeviceId" version="4.2.0" targetFramework="net45" />
+    <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net45" />
+    <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
