--- a/SecureApp/SecureApp/SecureApp.csproj
+++ b/SecureApp/SecureApp/SecureApp.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>false</Deterministic>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,21 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Command\Handshake.cs" />
-    <Compile Include="Core\Command\SharedSecret.cs" />
+    <Compile Include="Callbacks.cs" />
     <Compile Include="Core\Global.cs" />
     <Compile Include="Core\Plugins.cs" />
-    <Compile Include="Model\Interface\ICommand.cs" />
+    <Compile Include="Core\RemoteFunctions.cs" />
     <Compile Include="Model\Location.cs" />
-    <Compile Include="Model\Networking\ClientSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -55,9 +50,6 @@
       <Project>{5b2e1c7f-dfdf-4455-b996-3aea493ebd4a}</Project>
       <Name>SecureApp.Utilities</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
