--- a/php/composer.json
+++ b/php/composer.json
@@ -6,8 +6,7 @@
     "awobaz/compoships": "^1.0",
     "ramsey/uuid": "3.8.0",
     "awurth/slim-validation": "^3.1",
-    "akrabat/ip-address-middleware": "^1.0",
-    "hemiframe/php-aes": "~1.1"
+    "akrabat/ip-address-middleware": "^1.0"
   },
   "autoload": {
     "psr-4": {
