--- a/php/composer.json
+++ b/php/composer.json
@@ -6,7 +6,8 @@
     "ramsey/uuid": "3.8.0",
     "awurth/slim-validation": "^3.1",
     "akrabat/ip-address-middleware": "^1.0",
-    "slim/twig-view": "^2.5"
+    "slim/twig-view": "^2.5",
+    "rmccue/requests": ">=1.0"
   },
   "autoload": {
     "psr-4": {
